--- a/src/whiteBoard.css
+++ b/src/whiteBoard.css
@@ -1,3 +1,16 @@
+.toolbox{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+}
+
+.conclusion{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+}
 .box{
     display: flex;
     flex-direction: row;
@@ -6,12 +19,12 @@
 }
 
 .whiteboard{
-    flex-shrink: 2;
+    flex-grow: 3;
     width:100%;
     height: 1600px;
 }
 
 .comment{
-    flex-shrink: 1;
+    flex-grow: 1;
     width:400px;
 }
